--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header></header>
     <main>
+        <div class="task1">
+        <h2>Task 1</h2>
 
     <ul id="categories">
         <li class="item">
@@ -42,8 +45,22 @@
             </ul>
         </li>
     </ul>
+</div>
+
+<div class="task2">
+    <h2>Task 2</h2>
+    <ul id="ingredients"></ul>
+</div>
+
+<div class="task3">
+    <h2>Task 3</h2>
+
+    <ul id="gallery"></ul>
+</div>
     </main>
     
-    <script src="./task-1.js" type="module"></script>
+    <!-- <script src="./task_1.js" type="module"></script> -->
+    <script src="./task_2.js" type="module"></script>
+    <script src="./task_3.js" type="module"></script>
 </body>
 </html>
