Almost done all tasks

--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <header></header>
-    <main>
-        <div class="task1">
-        <h2>Task 1</h2>
+
+    <!-- Задание 1 -->
+    <h2 class="task-title">Task 1</h2>
 
     <ul id="categories">
         <li class="item">
@@ -45,22 +44,55 @@
             </ul>
         </li>
     </ul>
-</div>
 
-<div class="task2">
-    <h2>Task 2</h2>
+    <!-- Задание 2 -->
+    <h2 class="task-title">Task 2</h2>
     <ul id="ingredients"></ul>
-</div>
 
-<div class="task3">
-    <h2>Task 3</h2>
-
+    <!-- Задание 3 -->
+    <h2 class="task-title">Task 3</h2>
     <ul id="gallery"></ul>
-</div>
-    </main>
     
-    <!-- <script src="./task_1.js" type="module"></script> -->
+    <!-- Задание 4 -->
+    <h2 class="task-title">Task 4</h2>
+    <div id="counter">
+        <button type="button" data-action="decrement">-1</button>
+        <span id="value">0</span>
+        <button type="button" data-action="increment">+1</button>
+    </div>
+
+    <!-- Задание 5 -->
+    <h2 class="task-title">Task 5</h2>
+    <input type="text" placeholder="Ваше имя?" id="name-input" />
+    <h1>Привет, <span id="name-output">незнакомец</span>!</h1>
+
+    <!-- Задание 6 -->
+    <h2 class="task-title" >Task 6</h2>
+    <input type="text" id="validation-input" data-length="6" placeholder="Введи 6 символов" />
+
+    <!-- Задание 7 -->
+    <h2 class="task-title">Task 7</h2>
+    <input id="font-size-control" type="range" />
+    <br />
+    <span id="text">Абракадабра!</span>
+
+    <!-- Задание 8 -->
+    <h2 class="task-title">Task 8</h2>
+    <div id="controls">
+    <input type="number" min="0" max="100" step="1" />
+    <button type="button" data-action="render">Создать</button>
+    <button type="button" data-action="destroy">Очистить</button>
+    </div>
+    
+    <div id="boxes"></div>
+
+    <script src="./task_1.js" type="module"></script>
     <script src="./task_2.js" type="module"></script>
     <script src="./task_3.js" type="module"></script>
+    <script src="./task_4.js" type="module"></script>
+    <script src="./task_5.js" type="module"></script>
+    <script src="./task_6.js" type="module"></script>
+    <script src="./task_7.js" type="module"></script>
+    <script src="./task_8.js" type="module"></script>
 </body>
 </html>
